2007-08-27  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (on_play_pause),
	(popup_menu_position_func), (popup_menu_over_arrow),
	(on_popup_button_toggled), (on_popup_button_button_pressed),
	(on_video_button_press_event), (totem_embedded_construct):
	* data/mozilla-viewer.ui:

	Add a toggle button to the control bar that shows the right-click
	menu when toggled (Closes: #439105)

	Fix the button-press-event handler eating events thus preventing
	the popup menu to popdown

2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (treeview_row_changed),
	(totem_playlist_get_playing):
	* src/totem-playlist.h:
	* src/totem.c: (playlist_changed_cb): Fix activation (adding to
	the playlist, switching opened files, etc.) when 2 of the items in
	the playlist have the same MRL, see bug for details (Closes: #364311)

2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_parent_window_notify),
	(totem_fullscreen_new): Patch from Sunil Mohan Adapa
	<sunilmohan@gnu.org.in> to show the cursor when an error dialogue
	pops up (Closes: #439269)

2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/backend/Makefile.am:
	* src/backend/bacon-video-widget-xine.c: (xine_event_message),
	(add_auth_to_uri), (bacon_video_widget_open_with_subtitle):
	Patch from Dmitri Fedortchenko <zeraien@gmail.com> to make
	the backend try to get authentication information from the
	GNOME keyring when it gets a permission denied on HTTP.
	(Closes: #418316)

2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_entry_parsed):
	We ignore 0-length items in playlists, they're usually just banners
	(Closes: #441702)

2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (entry_parsed):
	* src/plparse/plparser.symbols:
	* src/plparse/test-parser.c: (test_duration_real), (test_duration),
	(main):