@@ -1,5 +1,11 @@
 2007-08-27  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plparse/totem-pl-parser-qt.c:
+	(totem_pl_parser_add_quicktime_metalink): Add support
+	for the autoplay property
+
+2007-08-27  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/totem-plugin-viewer.c: (on_play_pause),
 	(popup_menu_position_func), (popup_menu_over_arrow),
 	(on_popup_button_toggled), (on_popup_button_button_pressed),
